# keel

./: CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.claude/: settings.json
.claude/hooks/: run-tests.sh
crates/keel-cluster/: Cargo.toml
crates/keel-cluster/src/: cluster.rs  lib.rs  router.rs
crates/keel-kvcache/: Cargo.toml
crates/keel-kvcache/src/: error.rs  store.rs
crates/keel-proto/: Cargo.toml  build.rs
crates/keel-proto/src/pb/: keel.rs  mod.rs
crates/keel-signal/: Cargo.toml
crates/keel-store/: Cargo.toml
crates/keel-store/src/: error.rs  eviction.rs  index.rs  lib.rs  registry.rs  store.rs
plans/: keel_build_plan.md
proto/: keel.proto
src/: config.rs  error.rs  eviction.rs  index.rs  lib.rs  main.rs  registry.rs  server.rs  signal.rs
tests/: integration_kvcache.rs  integration_search.rs  integration_write_read.rs
