[workspace]
members = [
    ".",
    "crates/keel-proto",
    "crates/keel-signal",
    "crates/keel-store",
    "crates/keel-cluster",
]

[package]
name = "keel"
version = "0.1.0"
edition = "2021"

[dependencies]
keel-proto  = { path = "crates/keel-proto" }
keel-signal = { path = "crates/keel-signal" }
keel-store  = { path = "crates/keel-store" }
keel-cluster = { path = "crates/keel-cluster" }

tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "1"

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
